--- a/basics/package.json
+++ b/basics/package.json
@@ -6,12 +6,14 @@
   "private": "true",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack"
+    "build": "webpack --mode production",
+    "dev": "webpack --mode development"
   },
   "keywords": [],
   "author": "Vighnesh Nayak S",
   "license": "ISC",
   "devDependencies": {
+    "copy-webpack-plugin": "^12.0.1",
     "css-loader": "^6.9.0",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.7.7",
